static pages added

--- a/themes/werise/pages/domov.htm
+++ b/themes/werise/pages/domov.htm
@@ -429,7 +429,7 @@ is_hidden = 0
         </div>
         <h2 class="text-primary text-center text-white pt-5">NEDOZVEDELI STE SA VŠETKO ?</h2>
         <div class="w-100 text-center">
-            <button class="btn btn-secondary my-3">KOMPLETNÝ CENNÍK</button>
+            <a class="btn btn-secondary my-3" href="{{ 'cennik'|page }}">KOMPLETNÝ CENNÍK</a>
         </div>
     </div>
 </section>
@@ -485,37 +485,7 @@ is_hidden = 0
             </div>
         </div>
         <div class="text-center py-5">
-            <button class="btn btn-outline">VŠETKY REFERENCIE</button>
-        </div>
-    </div>
-</section>
-<section id="section-6">
-    <div class="container">
-        <h2 class="text-center text-primary"><span class="text-underline">Blog</span></h2>
-        <div class="col-md-7 mx-auto py-5">
-            <p class="text-muted text-center">Zaujímavé novinky z nášho prostredia a zo sveta digitálu nájdete na našom blogu</p>
-        </div>
-        <div class="row pb-5">
-            <div class="col-lg-6">
-                <div class="card border-0 p-md-4">
-                    <div class="card-body">
-                        <img src="storage/app/media/blog/blog_1.png" class="mx-auto img-fluid" height="158" alt="">
-                        <p class="card-title text-primary lead font-weight-bold mt-4">Navštívili sme digitálnu konferenciu</p>
-                        <p class="card-text small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu orci quis erat imperdiet sagittis nec ac velit. Nam ligula velit, ullamcorper</p>
-                        <button class="btn btn-primary mt-4">Viac info</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="card border-0 p-md-4">
-                    <div class="card-body">
-                        <img src="storage/app/media/blog/blog_2.png" class="mx-auto img-fluid" height="158" alt="">
-                        <p class="card-title text-primary lead font-weight-bold mt-4">Navštívili sme digitálnu konferenciu</p>
-                        <p class="card-text small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu orci quis erat imperdiet sagittis nec ac velit. Nam ligula velit, ullamcorper</p>
-                        <button class="btn btn-primary mt-4">Viac info</button>
-                    </div>
-                </div>
-            </div>
+            <a class="btn btn-outline" href="{{ 'referencie'|page }}">VŠETKY REFERENCIE</a>
         </div>
     </div>
 </section>
