--- a/themes/werise/pages/404.htm
+++ b/themes/werise/pages/404.htm
@@ -1,10 +1,11 @@
 title = "Page not found (404)"
 url = "/404"
-layout = "default"
+layout = "404"
 ==
-<div class="jumbotron">
-    <div class="container">
-        <h1>Page not found</h1>
-        <p>We're sorry, but the page you requested cannot be found.</p>
+<section>
+    <div class="container py-5 text-center">
+        <img src="storage/app/media/404.svg" class="img-fluid" alt="">
+        <h1 class="text-primary font-weight-bold pt-5">UPS, NIEČO SA POKAZILO !</h1>
+        <p class="lead">Táto stránka neexistuje. Pre návrat na hlavnú stránku <a href="" class="font-weight-bold"> kliknite tu</a>.</p>
     </div>
-</div>
+</section>
